# Group_Project_Mirrored

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  NEWS.md  README.md  TEAM.md  generateDocumentationAndDeploy.sh
ModelViewer/: CMakeLists.txt  filters.cpp  filters.h  license.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  readMod.cpp  readMod.h  vtkBoxCallback.cpp  vtkBoxCallback.h
ModelViewer/Icons/: icons.qrc
ModelViewer/Model_Library/Code/: Cell.cpp  Cell.h  Material.cpp  Material.h  model.cpp  model.h  vectorClass.cpp  vectorClass.h
ModelViewer/Model_Library/Test/: model_test.cpp  vector_test.cpp
Semester 1/: CMakeLists.txt  README.md
Semester 1/Code/: Cell.cpp  Cell.h  Material.cpp  Material.h  model.cpp  model.h  vectorClass.cpp  vectorClass.h
Semester 1/Example_Model_Files/: ExampleModel1.mod  ExampleModel3.mod
Semester 1/Test/: cell_main.cpp  main.cpp  mat_main.cpp  model_main.cpp  vector_main.cpp
